# quickreduce

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.py
csrc/: quickreduce.h  quickreduce.hip
csrc/core/: allreduce.h  base.h  buffer.h  mode.h
quickreduce/: setup.py
quickreduce/csrc/: device.cpp  device.h  device_pybind.cpp
quickreduce/quickreduce/: __init__.py
test/: oneshot_test.hip  test_utils.h  twoshot_fp8_test.hip  twoshot_q4_test.hip  twoshot_q6_test.hip  twoshot_q8_test.hip  twoshot_test.hip
